<resources>
    <string name="app_name">Fixello</string>

    <string name="already_accepted_user_key">already_accepted_user</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!--<string name="title_activity_map_pane">MapPane</string>-->
    <string name="first_page_desc">This is the First Description Page</string>
    <string name="second_page_desc">This is the Second Description Page</string>
    <string name="third_page_desc">This is the Third Description Page</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="start_using_fixello">Start Using Fixello</string>
    <string name="start">Start</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_first_page">Welcome to Fixello</string>


    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="book_now">Book Now</string>
    <string name="my_devices">My Devices</string>
    <string name="referral">Referral</string>
    <string name="status">Status</string>
    <string name="feedback">Feedback</string>
    <string name="credits">Credits</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <!-- Profile page-->
    <string name="sign_in_details">Sign in Details</string>
    <string name="email_id">Email ID</string>
    <string name="change_password">Change Password</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
