<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fixello.android.app.ui.main.fragments.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_24"
        android:text="@string/sign_in_details"
        android:gravity="center"
        android:padding="@dimen/dimen_10dp"
        android:background="@color/light_grey"/>

    <TextView
        android:text="@string/email_id"
        style="@style/ProfileHeaderTextView"
        />
    <EditText
        android:text="nks.22.1992@gmail.com"
        style="@style/ProfileEditText"
        />

    <TextView
        android:text="@string/name"
        style="@style/ProfileHeaderTextView"
        />
    <EditText
        android:text="Kalyan"
        style="@style/ProfileEditText"
        />

    <TextView
        android:text="@string/mobile_number"
        style="@style/ProfileHeaderTextView"
        />
    <EditText
        android:text="9677269859"
        style="@style/ProfileEditText"
        />

    <TextView
        android:text="@string/address"
        style="@style/ProfileHeaderTextView"
        />

    <EditText
        android:text="SomeAdd"
        style="@style/ProfileEditText"
        />

    <TextView
        android:text="@string/change_password"
        style="@style/ProfileHeaderTextView"
        />

    <EditText
        android:text="********"
        style="@style/ProfileEditText"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="@dimen/dimen_15dp"
        android:gravity="center"
        android:text="Update Profile"
        />
</LinearLayout>
